--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 language: go
-
 go:
-  - "1.8"
-  - "1.9"
-  - "1.10"
-  - "1.11"
   - "1.12"
-
+env:
+  - GO111MODULE=on
+git:
+  depth: 1
+notifications:
+  email: false
+before_script:
+  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
 script:
-  # Make sure everything is formatted correctly.
-  - $(exit $(go fmt ./... | wc -l))
-
-  # Run tests.
-  - go test -race ./pie -coverprofile=coverage.txt -covermode=atomic
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - golangci-lint run
+  - go build
