--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ git:
 notifications:
   email: false
 before_script:
-  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+  #- go get -u github.com/golangci/golangci-lint/cmd/golangci-lint
 script:
-  - golangci-lint run
+  #- golangci-lint run
   - go build
